<resources>
    <string name="app_name">Mortgage Calculator by Srinivas Rao Chavan</string>
    <string name="enter_principle">Enter Principle($):</string>
    <string name="rateLabel">Interest rate: %.1f%%</string>
    <string name="select_loan_term">Select Loan Term</string>
    <string name="_15_years">15 years</string>
    <string name="_20_years">20 years</string>
    <string name="_30_years">30 years</string>
    <string name="prompt">Press CALCULATE for monthly payment</string>
    <string name="monthlyResult">Monthly payments: %s</string>
    <string name="error_empty">Please enter the principle\nthen %s</string>
    <string name="error_digits">Please enter a valid number. 2 decimal digits max\nthen %s</string>
    <string name="error">Invalid Input!</string>
    <string name="limit_exceeded">Please enter a value less than 1000000\nthen %s</string>
    <string name="include_taxes_and_insurance_0_1">Include taxes &amp; insurance (0.1%)</string>
    <string name="calculate">CALCULATE</string>
    <string name="uninstall">UNINSTALL</string>
    <string name="language">Language</string>
</resources>