<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/large_margin"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/small_margin"
        android:text="@string/enter_principle"
        android:labelFor="@id/principle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/principle"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="@dimen/small_margin"
            android:inputType="numberDecimal"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="@+id/textView"
            tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_margin"
        android:text="@string/rateLabel"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <SeekBar
        android:id="@+id/seekBar"
        android:progress="100"
        android:max="200"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/rate"
        app:layout_constraintTop_toBottomOf="@+id/rate" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_margin"
        android:text="@string/select_loan_term"
        app:layout_constraintStart_toStartOf="@+id/seekBar"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="120dp"
        android:layout_height="150dp"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <RadioButton
            android:id="@+id/radio15"
            android:checked="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_15_years" />

        <RadioButton
            android:id="@+id/radio20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_20_years" />

        <RadioButton
            android:id="@+id/radio30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/_30_years" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="366dp"
        android:layout_height="65dp"
        android:layout_marginTop="@dimen/large_margin"
        android:text="@string/include_taxes_and_insurance_0_1"
        app:layout_constraintStart_toStartOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/cal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_margin"
        android:text="@string/calculate"
        android:layout_marginEnd="@dimen/mini_margin"
        app:layout_constraintEnd_toStartOf="@+id/uninstall"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <Button
        android:id="@+id/uninstall"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/uninstall"
        android:layout_marginStart="@dimen/mini_margin"
        app:layout_constraintBottom_toBottomOf="@+id/cal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cal"
        app:layout_constraintTop_toTopOf="@+id/cal" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_margin"
        android:text="@string/prompt"
        app:layout_constraintStart_toStartOf="@+id/cal"
        app:layout_constraintTop_toBottomOf="@+id/cal" />

</androidx.constraintlayout.widget.ConstraintLayout>